up welcome contrast and fix PM #3

--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -81,7 +81,7 @@ nav {
 }
 #welcome-message {
     max-width: 50%;
-    background: rgb(255,255,255,.5);
+    background: rgb(255,255,255,.75);
     padding: 2em;
     border-radius: 25px
 }
